@@ -1,6 +1,6 @@
 .cell-label,
 .attribute-label {
-  color: $grey-4;
+  color: $hint-grey;
   font-size: $small-font-size;
   font-weight: $normal-font-weight;
   letter-spacing: 0.0357em;
