@@ -1,6 +1,7 @@
 @import "attributes";
 @import "cells";
-@import "form";
 @import "date_time_picker";
+@import "form";
 @import "header";
+@import "search";
 @import "table";
