@@ -1,3 +1,21 @@
+<% content_for(:search) do %>
+  <form class="search">
+    <span class="search__icon">
+      <%= inline_svg "administrate/search.svg" %>
+    </span>
+    <input
+      type="text"
+      name="search"
+      class="search__input"
+      placeholder="Search"
+      value="<%= @search_term %>"
+    />
+    <span class="search__hint">
+      Press enter to search
+    </span>
+  </form>
+<% end %>
+
 <header class="header">
   <h1 class="header-heading"><%= @page.resource_name.pluralize.titleize %></h1>
   <%= link_to(
