@@ -1,14 +1,16 @@
+require "datetime_picker_rails"
+require "inline_svg"
+require "momentjs-rails"
 require "neat"
 require "normalize-rails"
 require "selectize-rails"
-require "momentjs-rails"
-require "datetime_picker_rails"
 
 require "administrate/namespace"
 require "administrate/page/form"
 require "administrate/page/show"
 require "administrate/page/table"
 require "administrate/resource_resolver"
+require "administrate/search"
 
 module Administrate
   class Engine < ::Rails::Engine
